Alterado/compilador.output
Terminals unused in grammar

   LABEL
   GOTO
   DIVISION_INTEGER
   ABRE_COLCHETES
   FECHA_COLCHETES


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT parametros_vazio PONTO_E_VIRGULA bloco PONTO

    3 parametros_vazio: parametros
    4                 | comando_vazio

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES

    6 $@2: %empty

    7 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 comando_composto

    8 tipo: INTEGER
    9     | BOOLEAN

   10 parte_declara_vars: var
   11                   | comando_vazio

   12 var: VAR declara_vars
   13    | declara_vars

   14 declara_vars: declara_vars declara_var
   15             | declara_var

   16 $@3: %empty

   17 $@4: %empty

   18 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA

   19 lista_id_var: lista_id_var VIRGULA IDENT
   20             | IDENT

   21 lista_idents: lista_idents VIRGULA IDENT
   22             | IDENT

   23 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas
   24                          | comando_vazio

   25 opcoes_sub_rotinas: declaracao_procedimento PONTO_E_VIRGULA
   26                   | declaracao_funcao PONTO_E_VIRGULA

   27 $@5: %empty

   28 $@6: %empty

   29 $@7: %empty

   30 $@8: %empty

   31 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

   32 parametros_formais_vazio: parametros_formais
   33                         | comando_vazio

   34 $@9: %empty

   35 $@10: %empty

   36 $@11: %empty

   37 $@12: %empty

   38 $@13: %empty

   39 declaracao_funcao: FUNCTION $@9 IDENT $@10 $@11 parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

   40 tipo_funcao: INTEGER
   41            | BOOLEAN

   42 $@14: %empty

   43 parametros_formais: ABRE_PARENTESES $@14 lista_parametros_formais FECHA_PARENTESES

   44 lista_parametros_formais: lista_parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   45 $@15: %empty

   46 lista_parametros_formais: $@15 secao_parametros_formais

   47 $@16: %empty

   48 $@17: %empty

   49 secao_parametros_formais: $@16 var_vazio $@17 lista_idents DOIS_PONTOS tipo

   50 var_vazio: VAR
   51          | comando_vazio

   52 comando_composto: T_BEGIN comandos T_END

   53 comandos: comandos PONTO_E_VIRGULA comando
   54         | comando

   55 comando: numero_ou_vazio comando_sem_rotulo

   56 numero_ou_vazio: numero DOIS_PONTOS
   57                | comando_vazio

   58 comando_vazio: %empty

   59 comando_sem_rotulo: variavel atribuicao_procedimento
   60                   | desvio
   61                   | comando_composto
   62                   | comando_condicional
   63                   | comando_repetitivo
   64                   | leitura
   65                   | escrita

   66 atribuicao_procedimento: atribuicao
   67                        | chama_procedimento

   68 atribuicao: ATRIBUICAO expressao

   69 $@18: %empty

   70 $@19: %empty

   71 $@20: %empty

   72 chama_procedimento: $@18 ABRE_PARENTESES $@19 lista_expressoes_ou_vazio FECHA_PARENTESES $@20

   73 $@21: %empty

   74 chama_procedimento: $@21

   75 lista_expressoes_ou_vazio: lista_expressoes
   76                          | comando_vazio

   77 desvio: %empty

   78 comando_condicional: if_then cond_else

   79 $@22: %empty

   80 if_then: IF expressao $@22 THEN comando_sem_rotulo

   81 $@23: %empty

   82 cond_else: ELSE $@23 else_multiplo_unico
   83          | %empty

   84 else_multiplo_unico: comando_sem_rotulo

   85 $@24: %empty

   86 $@25: %empty

   87 comando_repetitivo: WHILE $@24 expressao DO $@25 comando_composto

   88 $@26: %empty

   89 comando_repetitivo: REPEAT $@26 comandos UNTIL expressao

   90 lista_expressoes: expressao
   91                 | expressao VIRGULA lista_expressoes

   92 $@27: %empty

   93 expressao: $@27 expressao_simples relacao_exp_simples_vazio

   94 relacao_exp_simples_vazio: relacao expressao_simples
   95                          | comando_vazio

   96 relacao: EQUAL
   97        | DIFFERENT
   98        | MINOR
   99        | MINOR_EQUAL
  100        | GREATER_EQUAL
  101        | GREATER

  102 expressao_simples: mais_menos_vazio expressao_lista_termo

  103 mais_menos_vazio: SUM
  104                 | SUBTRACTION
  105                 | comando_vazio

  106 expressao_lista_termo: expressao_lista_termo lista_termo
  107                      | termo

  108 $@28: %empty

  109 lista_termo: $@28 SUM termo

  110 $@29: %empty

  111 lista_termo: $@29 SUBTRACTION termo

  112 $@30: %empty

  113 lista_termo: $@30 OR termo

  114 termo: termo lista_fator
  115      | fator

  116 $@31: %empty

  117 lista_fator: $@31 MULTIPLICATION fator

  118 $@32: %empty

  119 lista_fator: $@32 DIVISION_REAL fator

  120 $@33: %empty

  121 lista_fator: $@33 AND fator

  122 fator: variavel

  123 $@34: %empty

  124 fator: variavel ABRE_PARENTESES $@34 lista_expressoes FECHA_PARENTESES
  125      | numero
  126      | ABRE_PARENTESES expressao FECHA_PARENTESES
  127      | NOT fator

  128 variavel: IDENT

  129 numero: NUMBER

  130 leitura: READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES

  131 lista_leitura: lista_leitura VIRGULA simbolo_leitura
  132              | simbolo_leitura

  133 simbolo_leitura: IDENT

  134 escrita: WRITE ABRE_PARENTESES lista_escrita FECHA_PARENTESES

  135 lista_escrita: lista_escrita VIRGULA expressao
  136              | expressao


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 5 43 72 124 126 130 134
FECHA_PARENTESES (260) 5 43 72 124 126 130 134
VIRGULA (261) 19 21 91 131 135
PONTO_E_VIRGULA (262) 2 18 25 26 31 39 44 53
DOIS_PONTOS (263) 18 39 49 56
PONTO (264) 2
T_BEGIN (265) 52
T_END (266) 52
VAR (267) 12 50
IDENT (268) 2 19 20 21 22 31 39 128 133
ATRIBUICAO (269) 68
LABEL (270)
PROCEDURE (271) 31
FUNCTION (272) 39
GOTO (273)
IF (274) 80
THEN (275) 80
ELSE (276) 82
WHILE (277) 87
DO (278) 87
REPEAT (279) 89
UNTIL (280) 89
EQUAL (281) 96
DIFFERENT (282) 97
MINOR (283) 98
MINOR_EQUAL (284) 99
GREATER_EQUAL (285) 100
GREATER (286) 101
SUM (287) 103 109
SUBTRACTION (288) 104 111
MULTIPLICATION (289) 117
DIVISION_REAL (290) 119
DIVISION_INTEGER (291)
OR (292) 113
AND (293) 121
NOT (294) 127
ABRE_COLCHETES (295)
FECHA_COLCHETES (296)
INTEGER (297) 8 40
BOOLEAN (298) 9 41
READ (299) 130
WRITE (300) 134
NUMBER (301) 129
LOWER_THAN_ELSE (302)
NADA (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
programa (50)
    on left: 2, on right: 0
$@1 (51)
    on left: 1, on right: 2
parametros_vazio (52)
    on left: 3 4, on right: 2
parametros (53)
    on left: 5, on right: 3
bloco (54)
    on left: 7, on right: 2 31 39
$@2 (55)
    on left: 6, on right: 7
tipo (56)
    on left: 8 9, on right: 18 49
parte_declara_vars (57)
    on left: 10 11, on right: 7
var (58)
    on left: 12 13, on right: 10
declara_vars (59)
    on left: 14 15, on right: 12 13 14
declara_var (60)
    on left: 18, on right: 14 15
$@3 (61)
    on left: 16, on right: 18
$@4 (62)
    on left: 17, on right: 18
lista_id_var (63)
    on left: 19 20, on right: 18 19
lista_idents (64)
    on left: 21 22, on right: 5 21 49
parte_declara_sub_rotinas (65)
    on left: 23 24, on right: 7 23
opcoes_sub_rotinas (66)
    on left: 25 26, on right: 23
declaracao_procedimento (67)
    on left: 31, on right: 25
$@5 (68)
    on left: 27, on right: 31
$@6 (69)
    on left: 28, on right: 31
$@7 (70)
    on left: 29, on right: 31
$@8 (71)
    on left: 30, on right: 31
parametros_formais_vazio (72)
    on left: 32 33, on right: 31 39
declaracao_funcao (73)
    on left: 39, on right: 26
$@9 (74)
    on left: 34, on right: 39
$@10 (75)
    on left: 35, on right: 39
$@11 (76)
    on left: 36, on right: 39
$@12 (77)
    on left: 37, on right: 39
$@13 (78)
    on left: 38, on right: 39
tipo_funcao (79)
    on left: 40 41, on right: 39
parametros_formais (80)
    on left: 43, on right: 32
$@14 (81)
    on left: 42, on right: 43
lista_parametros_formais (82)
    on left: 44 46, on right: 43 44
$@15 (83)
    on left: 45, on right: 46
secao_parametros_formais (84)
    on left: 49, on right: 44 46
$@16 (85)
    on left: 47, on right: 49
$@17 (86)
    on left: 48, on right: 49
var_vazio (87)
    on left: 50 51, on right: 49
comando_composto (88)
    on left: 52, on right: 7 61 87
comandos (89)
    on left: 53 54, on right: 52 53 89
comando (90)
    on left: 55, on right: 53 54
numero_ou_vazio (91)
    on left: 56 57, on right: 55
comando_vazio (92)
    on left: 58, on right: 4 11 24 33 51 57 76 95 105
comando_sem_rotulo (93)
    on left: 59 60 61 62 63 64 65, on right: 55 80 84
atribuicao_procedimento (94)
    on left: 66 67, on right: 59
atribuicao (95)
    on left: 68, on right: 66
chama_procedimento (96)
    on left: 72 74, on right: 67
$@18 (97)
    on left: 69, on right: 72
$@19 (98)
    on left: 70, on right: 72
$@20 (99)
    on left: 71, on right: 72
$@21 (100)
    on left: 73, on right: 74
lista_expressoes_ou_vazio (101)
    on left: 75 76, on right: 72
desvio (102)
    on left: 77, on right: 60
comando_condicional (103)
    on left: 78, on right: 62
if_then (104)
    on left: 80, on right: 78
$@22 (105)
    on left: 79, on right: 80
cond_else (106)
    on left: 82 83, on right: 78
$@23 (107)
    on left: 81, on right: 82
else_multiplo_unico (108)
    on left: 84, on right: 82
comando_repetitivo (109)
    on left: 87 89, on right: 63
$@24 (110)
    on left: 85, on right: 87
$@25 (111)
    on left: 86, on right: 87
$@26 (112)
    on left: 88, on right: 89
lista_expressoes (113)
    on left: 90 91, on right: 75 91 124
expressao (114)
    on left: 93, on right: 68 80 87 89 90 91 126 135 136
$@27 (115)
    on left: 92, on right: 93
relacao_exp_simples_vazio (116)
    on left: 94 95, on right: 93
relacao (117)
    on left: 96 97 98 99 100 101, on right: 94
expressao_simples (118)
    on left: 102, on right: 93 94
mais_menos_vazio (119)
    on left: 103 104 105, on right: 102
expressao_lista_termo (120)
    on left: 106 107, on right: 102 106
lista_termo (121)
    on left: 109 111 113, on right: 106
$@28 (122)
    on left: 108, on right: 109
$@29 (123)
    on left: 110, on right: 111
$@30 (124)
    on left: 112, on right: 113
termo (125)
    on left: 114 115, on right: 107 109 111 113 114
lista_fator (126)
    on left: 117 119 121, on right: 114
$@31 (127)
    on left: 116, on right: 117
$@32 (128)
    on left: 118, on right: 119
$@33 (129)
    on left: 120, on right: 121
fator (130)
    on left: 122 124 125 126 127, on right: 115 117 119 121 127
$@34 (131)
    on left: 123, on right: 124
variavel (132)
    on left: 128, on right: 59 122 124
numero (133)
    on left: 129, on right: 56 125
leitura (134)
    on left: 130, on right: 64
lista_leitura (135)
    on left: 131 132, on right: 130 131
simbolo_leitura (136)
    on left: 133, on right: 131 132
escrita (137)
    on left: 134, on right: 65
lista_escrita (138)
    on left: 135 136, on right: 134 135


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT parametros_vazio PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT parametros_vazio PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . parametros_vazio PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6

    $default  reduce using rule 58 (comando_vazio)

    parametros_vazio  go to state 7
    parametros        go to state 8
    comando_vazio     go to state 9


State 6

    5 parametros: ABRE_PARENTESES . lista_idents FECHA_PARENTESES

    IDENT  shift, and go to state 10

    lista_idents  go to state 11


State 7

    2 programa: $@1 PROGRAM IDENT parametros_vazio . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 8

    3 parametros_vazio: parametros .

    $default  reduce using rule 3 (parametros_vazio)


State 9

    4 parametros_vazio: comando_vazio .

    $default  reduce using rule 4 (parametros_vazio)


State 10

   22 lista_idents: IDENT .

    $default  reduce using rule 22 (lista_idents)


State 11

    5 parametros: ABRE_PARENTESES lista_idents . FECHA_PARENTESES
   21 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 13
    VIRGULA           shift, and go to state 14


State 12

    2 programa: $@1 PROGRAM IDENT parametros_vazio PONTO_E_VIRGULA . bloco PONTO

    VAR  shift, and go to state 15

    IDENT     reduce using rule 16 ($@3)
    $default  reduce using rule 58 (comando_vazio)

    bloco               go to state 16
    parte_declara_vars  go to state 17
    var                 go to state 18
    declara_vars        go to state 19
    declara_var         go to state 20
    $@3                 go to state 21
    comando_vazio       go to state 22


State 13

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES .

    $default  reduce using rule 5 (parametros)


State 14

   21 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 23


State 15

   12 var: VAR . declara_vars

    $default  reduce using rule 16 ($@3)

    declara_vars  go to state 24
    declara_var   go to state 20
    $@3           go to state 21


State 16

    2 programa: $@1 PROGRAM IDENT parametros_vazio PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 25


State 17

    7 bloco: parte_declara_vars . parte_declara_sub_rotinas $@2 comando_composto

    $default  reduce using rule 58 (comando_vazio)

    parte_declara_sub_rotinas  go to state 26
    comando_vazio              go to state 27


State 18

   10 parte_declara_vars: var .

    $default  reduce using rule 10 (parte_declara_vars)


State 19

   13 var: declara_vars .
   14 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 16 ($@3)
    $default  reduce using rule 13 (var)

    declara_var  go to state 28
    $@3          go to state 21


State 20

   15 declara_vars: declara_var .

    $default  reduce using rule 15 (declara_vars)


State 21

   18 declara_var: $@3 . lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA

    IDENT  shift, and go to state 29

    lista_id_var  go to state 30


State 22

   11 parte_declara_vars: comando_vazio .

    $default  reduce using rule 11 (parte_declara_vars)


State 23

   21 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 21 (lista_idents)


State 24

   12 var: VAR declara_vars .
   14 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 16 ($@3)
    $default  reduce using rule 12 (var)

    declara_var  go to state 28
    $@3          go to state 21


State 25

    2 programa: $@1 PROGRAM IDENT parametros_vazio PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 26

    7 bloco: parte_declara_vars parte_declara_sub_rotinas . $@2 comando_composto
   23 parte_declara_sub_rotinas: parte_declara_sub_rotinas . opcoes_sub_rotinas

    PROCEDURE  shift, and go to state 31
    FUNCTION   shift, and go to state 32

    $default  reduce using rule 6 ($@2)

    $@2                      go to state 33
    opcoes_sub_rotinas       go to state 34
    declaracao_procedimento  go to state 35
    declaracao_funcao        go to state 36


State 27

   24 parte_declara_sub_rotinas: comando_vazio .

    $default  reduce using rule 24 (parte_declara_sub_rotinas)


State 28

   14 declara_vars: declara_vars declara_var .

    $default  reduce using rule 14 (declara_vars)


State 29

   20 lista_id_var: IDENT .

    $default  reduce using rule 20 (lista_id_var)


State 30

   18 declara_var: $@3 lista_id_var . DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA
   19 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 37
    DOIS_PONTOS  shift, and go to state 38


State 31

   31 declaracao_procedimento: PROCEDURE . $@5 IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $default  reduce using rule 27 ($@5)

    $@5  go to state 39


State 32

   39 declaracao_funcao: FUNCTION . $@9 IDENT $@10 $@11 parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    $default  reduce using rule 34 ($@9)

    $@9  go to state 40


State 33

    7 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 . comando_composto

    T_BEGIN  shift, and go to state 41

    comando_composto  go to state 42


State 34

   23 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas .

    $default  reduce using rule 23 (parte_declara_sub_rotinas)


State 35

   25 opcoes_sub_rotinas: declaracao_procedimento . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 43


State 36

   26 opcoes_sub_rotinas: declaracao_funcao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 44


State 37

   19 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 45


State 38

   18 declara_var: $@3 lista_id_var DOIS_PONTOS . tipo $@4 PONTO_E_VIRGULA

    INTEGER  shift, and go to state 46
    BOOLEAN  shift, and go to state 47

    tipo  go to state 48


State 39

   31 declaracao_procedimento: PROCEDURE $@5 . IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    IDENT  shift, and go to state 49


State 40

   39 declaracao_funcao: FUNCTION $@9 . IDENT $@10 $@11 parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    IDENT  shift, and go to state 50


State 41

   52 comando_composto: T_BEGIN . comandos T_END

    NUMBER  shift, and go to state 51

    $default  reduce using rule 58 (comando_vazio)

    comandos         go to state 52
    comando          go to state 53
    numero_ou_vazio  go to state 54
    comando_vazio    go to state 55
    numero           go to state 56


State 42

    7 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 comando_composto .

    $default  reduce using rule 7 (bloco)


State 43

   25 opcoes_sub_rotinas: declaracao_procedimento PONTO_E_VIRGULA .

    $default  reduce using rule 25 (opcoes_sub_rotinas)


State 44

   26 opcoes_sub_rotinas: declaracao_funcao PONTO_E_VIRGULA .

    $default  reduce using rule 26 (opcoes_sub_rotinas)


State 45

   19 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 19 (lista_id_var)


State 46

    8 tipo: INTEGER .

    $default  reduce using rule 8 (tipo)


State 47

    9 tipo: BOOLEAN .

    $default  reduce using rule 9 (tipo)


State 48

   18 declara_var: $@3 lista_id_var DOIS_PONTOS tipo . $@4 PONTO_E_VIRGULA

    $default  reduce using rule 17 ($@4)

    $@4  go to state 57


State 49

   31 declaracao_procedimento: PROCEDURE $@5 IDENT . $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $default  reduce using rule 28 ($@6)

    $@6  go to state 58


State 50

   39 declaracao_funcao: FUNCTION $@9 IDENT . $@10 $@11 parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    $default  reduce using rule 35 ($@10)

    $@10  go to state 59


State 51

  129 numero: NUMBER .

    $default  reduce using rule 129 (numero)


State 52

   52 comando_composto: T_BEGIN comandos . T_END
   53 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 60
    T_END            shift, and go to state 61


State 53

   54 comandos: comando .

    $default  reduce using rule 54 (comandos)


State 54

   55 comando: numero_ou_vazio . comando_sem_rotulo

    T_BEGIN  shift, and go to state 41
    IDENT    shift, and go to state 62
    IF       shift, and go to state 63
    WHILE    shift, and go to state 64
    REPEAT   shift, and go to state 65
    READ     shift, and go to state 66
    WRITE    shift, and go to state 67

    $default  reduce using rule 77 (desvio)

    comando_composto     go to state 68
    comando_sem_rotulo   go to state 69
    desvio               go to state 70
    comando_condicional  go to state 71
    if_then              go to state 72
    comando_repetitivo   go to state 73
    variavel             go to state 74
    leitura              go to state 75
    escrita              go to state 76


State 55

   57 numero_ou_vazio: comando_vazio .

    $default  reduce using rule 57 (numero_ou_vazio)


State 56

   56 numero_ou_vazio: numero . DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 77


State 57

   18 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 78


State 58

   31 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 . $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $default  reduce using rule 29 ($@7)

    $@7  go to state 79


State 59

   39 declaracao_funcao: FUNCTION $@9 IDENT $@10 . $@11 parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    $default  reduce using rule 36 ($@11)

    $@11  go to state 80


State 60

   53 comandos: comandos PONTO_E_VIRGULA . comando

    NUMBER  shift, and go to state 51

    $default  reduce using rule 58 (comando_vazio)

    comando          go to state 81
    numero_ou_vazio  go to state 54
    comando_vazio    go to state 55
    numero           go to state 56


State 61

   52 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 52 (comando_composto)


State 62

  128 variavel: IDENT .

    $default  reduce using rule 128 (variavel)


State 63

   80 if_then: IF . expressao $@22 THEN comando_sem_rotulo

    $default  reduce using rule 92 ($@27)

    expressao  go to state 82
    $@27       go to state 83


State 64

   87 comando_repetitivo: WHILE . $@24 expressao DO $@25 comando_composto

    $default  reduce using rule 85 ($@24)

    $@24  go to state 84


State 65

   89 comando_repetitivo: REPEAT . $@26 comandos UNTIL expressao

    $default  reduce using rule 88 ($@26)

    $@26  go to state 85


State 66

  130 leitura: READ . ABRE_PARENTESES lista_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 86


State 67

  134 escrita: WRITE . ABRE_PARENTESES lista_escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 87


State 68

   61 comando_sem_rotulo: comando_composto .

    $default  reduce using rule 61 (comando_sem_rotulo)


State 69

   55 comando: numero_ou_vazio comando_sem_rotulo .

    $default  reduce using rule 55 (comando)


State 70

   60 comando_sem_rotulo: desvio .

    $default  reduce using rule 60 (comando_sem_rotulo)


State 71

   62 comando_sem_rotulo: comando_condicional .

    $default  reduce using rule 62 (comando_sem_rotulo)


State 72

   78 comando_condicional: if_then . cond_else

    ELSE  shift, and go to state 88

    $default  reduce using rule 83 (cond_else)

    cond_else  go to state 89


State 73

   63 comando_sem_rotulo: comando_repetitivo .

    $default  reduce using rule 63 (comando_sem_rotulo)


State 74

   59 comando_sem_rotulo: variavel . atribuicao_procedimento

    ATRIBUICAO  shift, and go to state 90

    ABRE_PARENTESES  reduce using rule 69 ($@18)
    $default         reduce using rule 73 ($@21)

    atribuicao_procedimento  go to state 91
    atribuicao               go to state 92
    chama_procedimento       go to state 93
    $@18                     go to state 94
    $@21                     go to state 95


State 75

   64 comando_sem_rotulo: leitura .

    $default  reduce using rule 64 (comando_sem_rotulo)


State 76

   65 comando_sem_rotulo: escrita .

    $default  reduce using rule 65 (comando_sem_rotulo)


State 77

   56 numero_ou_vazio: numero DOIS_PONTOS .

    $default  reduce using rule 56 (numero_ou_vazio)


State 78

   18 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA .

    $default  reduce using rule 18 (declara_var)


State 79

   31 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 . parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    ABRE_PARENTESES  shift, and go to state 96

    $default  reduce using rule 58 (comando_vazio)

    parametros_formais_vazio  go to state 97
    parametros_formais        go to state 98
    comando_vazio             go to state 99


State 80

   39 declaracao_funcao: FUNCTION $@9 IDENT $@10 $@11 . parametros_formais_vazio DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    ABRE_PARENTESES  shift, and go to state 96

    $default  reduce using rule 58 (comando_vazio)

    parametros_formais_vazio  go to state 100
    parametros_formais        go to state 98
    comando_vazio             go to state 99


State 81

   53 comandos: comandos PONTO_E_VIRGULA comando .

    $default  reduce using rule 53 (comandos)


State 82

   80 if_then: IF expressao . $@22 THEN comando_sem_rotulo

    $default  reduce using rule 79 ($@22)

    $@22  go to state 101


State 83

   93 expressao: $@27 . expressao_simples relacao_exp_simples_vazio

    SUM          shift, and go to state 102
    SUBTRACTION  shift, and go to state 103

    $default  reduce using rule 58 (comando_vazio)

    comando_vazio      go to state 104
    expressao_simples  go to state 105
    mais_menos_vazio   go to state 106


State 84

   87 comando_repetitivo: WHILE $@24 . expressao DO $@25 comando_composto

    $default  reduce using rule 92 ($@27)

    expressao  go to state 107
    $@27       go to state 83


State 85

   89 comando_repetitivo: REPEAT $@26 . comandos UNTIL expressao

    NUMBER  shift, and go to state 51

    $default  reduce using rule 58 (comando_vazio)

    comandos         go to state 108
    comando          go to state 53
    numero_ou_vazio  go to state 54
    comando_vazio    go to state 55
    numero           go to state 56


State 86

  130 leitura: READ ABRE_PARENTESES . lista_leitura FECHA_PARENTESES

    IDENT  shift, and go to state 109

    lista_leitura    go to state 110
    simbolo_leitura  go to state 111


State 87

  134 escrita: WRITE ABRE_PARENTESES . lista_escrita FECHA_PARENTESES

    $default  reduce using rule 92 ($@27)

    expressao      go to state 112
    $@27           go to state 83
    lista_escrita  go to state 113


State 88

   82 cond_else: ELSE . $@23 else_multiplo_unico

    $default  reduce using rule 81 ($@23)

    $@23  go to state 114


State 89

   78 comando_condicional: if_then cond_else .

    $default  reduce using rule 78 (comando_condicional)


State 90

   68 atribuicao: ATRIBUICAO . expressao

    $default  reduce using rule 92 ($@27)

    expressao  go to state 115
    $@27       go to state 83


State 91

   59 comando_sem_rotulo: variavel atribuicao_procedimento .

    $default  reduce using rule 59 (comando_sem_rotulo)


State 92

   66 atribuicao_procedimento: atribuicao .

    $default  reduce using rule 66 (atribuicao_procedimento)


State 93

   67 atribuicao_procedimento: chama_procedimento .

    $default  reduce using rule 67 (atribuicao_procedimento)


State 94

   72 chama_procedimento: $@18 . ABRE_PARENTESES $@19 lista_expressoes_ou_vazio FECHA_PARENTESES $@20

    ABRE_PARENTESES  shift, and go to state 116


State 95

   74 chama_procedimento: $@21 .

    $default  reduce using rule 74 (chama_procedimento)


State 96

   43 parametros_formais: ABRE_PARENTESES . $@14 lista_parametros_formais FECHA_PARENTESES

    $default  reduce using rule 42 ($@14)

    $@14  go to state 117


State 97

   31 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 parametros_formais_vazio . PONTO_E_VIRGULA $@8 bloco

    PONTO_E_VIRGULA  shift, and go to state 118


State 98

   32 parametros_formais_vazio: parametros_formais .

    $default  reduce using rule 32 (parametros_formais_vazio)


State 99

   33 parametros_formais_vazio: comando_vazio .

    $default  reduce using rule 33 (parametros_formais_vazio)


State 100

   39 declaracao_funcao: FUNCTION $@9 IDENT $@10 $@11 parametros_formais_vazio . DOIS_PONTOS tipo_funcao $@12 PONTO_E_VIRGULA $@13 bloco

    DOIS_PONTOS  shift, and go to state 119


State 101

   80 if_then: IF expressao $@22 . THEN comando_sem_rotulo

    THEN  shift, and go to state 120


State 102

  103 mais_menos_vazio: SUM .

    $default  reduce using rule 103 (mais_menos_vazio)


State 103

  104 mais_menos_vazio: SUBTRACTION .

    $default  reduce using rule 104 (mais_menos_vazio)


State 104

  105 mais_menos_vazio: comando_vazio .

    $default  reduce using rule 105 (mais_menos_vazio)


State 105

   93 expressao: $@27 expressao_simples . relacao_exp_simples_vazio

    EQUAL          shift, and go to state 121
    DIFFERENT      shift, and go to state 122
    MINOR          shift, and go to state 123
    MINOR_EQUAL    shift, and go to state 124
    GREATER_EQUAL  shift, and go to state 125
    GREATER        shift, and go to state 126

    $default  reduce using rule 58 (comando_vazio)

    comando_vazio              go to state 127
    relacao_exp_simples_vazio  go to state 128
    relacao                    go to state 129


State 106

  102 expressao_simples: mais_menos_vazio . expressao_lista_termo

    ABRE_PARENTESES  shift, and go to state 130
    IDENT            shift, and go to state 62
    NOT              shift, and go to state 131
    NUMBER           shift, and go to state 51

    expressao_lista_termo  go to state 132
    termo                  go to state 133
    fator                  go to state 134
    variavel               go to state 135
    numero                 go to state 136


State 107

   87 comando_repetitivo: WHILE $@24 expressao . DO $@25 comando_composto

    DO  shift, and go to state 137


State 108

   53 comandos: comandos . PONTO_E_VIRGULA comando
   89 comando_repetitivo: REPEAT $@26 comandos . UNTIL expressao

    PONTO_E_VIRGULA  shift, and go to state 60
    UNTIL            shift, and go to state 138


State 109

  133 simbolo_leitura: IDENT .

    $default  reduce using rule 133 (simbolo_leitura)


State 110

  130 leitura: READ ABRE_PARENTESES lista_leitura . FECHA_PARENTESES
  131 lista_leitura: lista_leitura . VIRGULA simbolo_leitura

    FECHA_PARENTESES  shift, and go to state 139
    VIRGULA           shift, and go to state 140


State 111

  132 lista_leitura: simbolo_leitura .

    $default  reduce using rule 132 (lista_leitura)


State 112

  136 lista_escrita: expressao .

    $default  reduce using rule 136 (lista_escrita)


State 113

  134 escrita: WRITE ABRE_PARENTESES lista_escrita . FECHA_PARENTESES
  135 lista_escrita: lista_escrita . VIRGULA expressao

    FECHA_PARENTESES  shift, and go to state 141
    VIRGULA           shift, and go to state 142


State 114

   82 cond_else: ELSE $@23 . else_multiplo_unico

    T_BEGIN  shift, and go to state 41
    IDENT    shift, and go to state 62
    IF       shift, and go to state 63
    WHILE    shift, and go to state 64
    REPEAT   shift, and go to state 65
    READ     shift, and go to state 66
    WRITE    shift, and go to state 67
